# Homefront-Free-Camera

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
injector/: injector.cpp
src/: dllmain.cpp  freecam.cpp  freecam.h  hooks.cpp  hooks.h  input.cpp  input.h  log.h
